{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 122,
  "lineage": "6ac1d3b0-9a62-8dd9-02ff-8d61a6d3b83a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e0e22d926980bf2",
            "domain": "vpc",
            "id": "eipalloc-01e0e22d926980bf2",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-238-209-42.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.209.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "main-vpc",
              "Name": "MAIN Private IP For VPC"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "MAIN Private IP For VPC"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "peer-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c65a01614b40fbca",
            "domain": "vpc",
            "id": "eipalloc-0c65a01614b40fbca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-210-62-28.compute-1.amazonaws.com",
            "public_ip": "3.210.62.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "peer PEER Private IP For VPC"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "peer PEER Private IP For VPC"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "multiregion-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:internet-gateway/igw-0602cec4beeb2e475",
            "id": "igw-0602cec4beeb2e475",
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "multiregion-igw}"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "multiregion-igw}"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "multiregion-igw-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:internet-gateway/igw-04f230fa92fa61487",
            "id": "igw-04f230fa92fa61487",
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "multiregion-igw-peer"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "multiregion-igw-peer"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:route-table/rtb-0b5ebfee45ffe11ce",
            "id": "rtb-0b5ebfee45ffe11ce",
            "owner_id": "938515849324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0602cec4beeb2e475",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "main-vpc",
              "Name": "DEFAULT ROUTE TABLE FOR NAT"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "DEFAULT ROUTE TABLE FOR NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "peer-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:route-table/rtb-0668aeec0008f8c67",
            "id": "rtb-0668aeec0008f8c67",
            "owner_id": "938515849324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f230fa92fa61487",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "peer-vpc",
              "Name": "DEFAULT ROUTE TABLE FOR NAT"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "DEFAULT ROUTE TABLE FOR NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "peer-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:route-table/rtb-0a2cece78a9ea2ad9",
            "id": "rtb-0a2cece78a9ea2ad9",
            "owner_id": "938515849324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "peer-vpc",
              "Name": "RDS ROUTE TABLE"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "RDS ROUTE TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:route-table/rtb-0f0803bf67a16ddeb",
            "id": "rtb-0f0803bf67a16ddeb",
            "owner_id": "938515849324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0602cec4beeb2e475",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "Name": "ELB DASHBOARD ROUTE TABLE"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ELB DASHBOARD ROUTE TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:route-table/rtb-0b3b5326837816821",
            "id": "rtb-0b3b5326837816821",
            "owner_id": "938515849324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f230fa92fa61487",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "Name": "ELB DASHBOARD ROUTE TABLE"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ELB DASHBOARD ROUTE TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:route-table/rtb-06f67b2edc69b4c14",
            "id": "rtb-06f67b2edc69b4c14",
            "owner_id": "938515849324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "main-vpc",
              "Name": "RDS ROUTE TABLE"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "RDS ROUTE TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-nat-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da7f792ad9f3bd87",
            "route_table_id": "rtb-0b5ebfee45ffe11ce",
            "subnet_id": "subnet-03562678c3bdfd360"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.main-nat",
            "aws_subnet.nat-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "peer-nat-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c1e9b07373426f8",
            "route_table_id": "rtb-0668aeec0008f8c67",
            "subnet_id": "subnet-0f041e1e653e107cf"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.peer-nat",
            "aws_subnet.nat-2a-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eae22e72085c464",
            "route_table_id": "rtb-0668aeec0008f8c67",
            "subnet_id": "subnet-090a975dd423c9867"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.peer-nat",
            "aws_subnet.private-1a",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0247bdab4ac95483a",
            "route_table_id": "rtb-0668aeec0008f8c67",
            "subnet_id": "subnet-015348ac6bb359b31"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.peer-nat",
            "aws_subnet.private-1b",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6c90112def89ba0",
            "route_table_id": "rtb-0668aeec0008f8c67",
            "subnet_id": "subnet-0779d97c36948b8c7"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.peer-nat",
            "aws_subnet.private-1c",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcbbf1160542f60e",
            "route_table_id": "rtb-0668aeec0008f8c67",
            "subnet_id": "subnet-0d13166fb597ebb96"
          },
          "dependencies": [
            "aws_route_table.peer-nat",
            "aws_subnet.private-1d",
            "aws_vpc.peer",
            "aws_internet_gateway.multiregion-igw-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f212e87e5fb8980",
            "route_table_id": "rtb-0b5ebfee45ffe11ce",
            "subnet_id": "subnet-092caa036f3ee9ff3"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.main-nat",
            "aws_subnet.private-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000b69d504600efd2",
            "route_table_id": "rtb-0b5ebfee45ffe11ce",
            "subnet_id": "subnet-06d42ae6d22cc4031"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.main-nat",
            "aws_subnet.private-2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec02dc52fa588a1",
            "route_table_id": "rtb-0b5ebfee45ffe11ce",
            "subnet_id": "subnet-0165d07740e5f056c"
          },
          "dependencies": [
            "aws_route_table.main-nat",
            "aws_subnet.private-2c",
            "aws_vpc.main",
            "aws_internet_gateway.multiregion-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006261e54958bb851",
            "route_table_id": "rtb-0b5ebfee45ffe11ce",
            "subnet_id": "subnet-06441624c022d6a14"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.main-nat",
            "aws_subnet.private-2d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6f1a99ccdf7f448",
            "route_table_id": "rtb-0f0803bf67a16ddeb",
            "subnet_id": "subnet-0ed331071cc8a1b5e"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.public-main",
            "aws_subnet.public-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2a-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734d72ecc5ec2773",
            "route_table_id": "rtb-0b3b5326837816821",
            "subnet_id": "subnet-0280153b78cd26887"
          },
          "dependencies": [
            "aws_subnet.public-2a-peer",
            "aws_vpc.peer",
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.public-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085dcb0b0dfc39ceb",
            "route_table_id": "rtb-0f0803bf67a16ddeb",
            "subnet_id": "subnet-080c2bd4fd168dec6"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.public-main",
            "aws_subnet.public-2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2b-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af028b6e0362876c",
            "route_table_id": "rtb-0b3b5326837816821",
            "subnet_id": "subnet-0932bec6bf9cd4dc8"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.public-peer",
            "aws_subnet.public-2b-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058541630412a654d",
            "route_table_id": "rtb-0f0803bf67a16ddeb",
            "subnet_id": "subnet-0bad15261e9e77ee0"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.public-main",
            "aws_subnet.public-2c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2c-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e78b2256b7b4bf1f",
            "route_table_id": "rtb-0b3b5326837816821",
            "subnet_id": "subnet-0ed33de62fa095faf"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw-peer",
            "aws_route_table.public-peer",
            "aws_subnet.public-2c-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e732b30f6bce32a",
            "route_table_id": "rtb-0f0803bf67a16ddeb",
            "subnet_id": "subnet-0280e242eafcf495d"
          },
          "dependencies": [
            "aws_internet_gateway.multiregion-igw",
            "aws_route_table.public-main",
            "aws_subnet.public-2d",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2d-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009b5b2f197f75ba5",
            "route_table_id": "rtb-0b3b5326837816821",
            "subnet_id": "subnet-0b5261b0f538570d5"
          },
          "dependencies": [
            "aws_route_table.public-peer",
            "aws_subnet.public-2d-peer",
            "aws_vpc.peer",
            "aws_internet_gateway.multiregion-igw-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds-1a-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bb94263071f85f2",
            "route_table_id": "rtb-0a2cece78a9ea2ad9",
            "subnet_id": "subnet-0651b2cb712f77151"
          },
          "dependencies": [
            "aws_route_table.peer-rds",
            "aws_subnet.rds-1a-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds-1b-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4db0a7fe1b18351",
            "route_table_id": "rtb-0a2cece78a9ea2ad9",
            "subnet_id": "subnet-03a0d24f22c4eae64"
          },
          "dependencies": [
            "aws_route_table.peer-rds",
            "aws_subnet.rds-1b-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds-1c-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c685814af87cc9",
            "route_table_id": "rtb-0a2cece78a9ea2ad9",
            "subnet_id": "subnet-00d9d0162967a7569"
          },
          "dependencies": [
            "aws_route_table.peer-rds",
            "aws_subnet.rds-1c-peer",
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070d5e270e849a181",
            "route_table_id": "rtb-06f67b2edc69b4c14",
            "subnet_id": "subnet-0c318786c6f97f6a8"
          },
          "dependencies": [
            "aws_route_table.rds",
            "aws_subnet.rds-2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085b6af473241ede",
            "route_table_id": "rtb-06f67b2edc69b4c14",
            "subnet_id": "subnet-088558535557beedf"
          },
          "dependencies": [
            "aws_subnet.rds-2b",
            "aws_vpc.main",
            "aws_route_table.rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0561fda5e53e36f25",
            "route_table_id": "rtb-06f67b2edc69b4c14",
            "subnet_id": "subnet-02c53059c15362dec"
          },
          "dependencies": [
            "aws_subnet.rds-2c",
            "aws_vpc.main",
            "aws_route_table.rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-03562678c3bdfd360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.50.0/27",
            "id": "subnet-03562678c3bdfd360",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "NAT PUB SUBNET 2A"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "NAT PUB SUBNET 2A"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-2a-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0f041e1e653e107cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.50.0/27",
            "id": "subnet-0f041e1e653e107cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "NAT PUB SUBNET 1A"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "NAT PUB SUBNET 1A"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-090a975dd423c9867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-090a975dd423c9867",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1A"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1A"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-015348ac6bb359b31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-015348ac6bb359b31",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1B"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1B"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0779d97c36948b8c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0779d97c36948b8c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1C"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1C"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0d13166fb597ebb96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-0d13166fb597ebb96",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1D"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 1D"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-092caa036f3ee9ff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-092caa036f3ee9ff3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2A"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2A"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-06d42ae6d22cc4031",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-06d42ae6d22cc4031",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2B"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2B"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-0165d07740e5f056c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0165d07740e5f056c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2C"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2C"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-06441624c022d6a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-06441624c022d6a14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2D"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PRIV SUBNET 2D"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-0ed331071cc8a1b5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/27",
            "id": "subnet-0ed331071cc8a1b5e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2A"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2A"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2a-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0280153b78cd26887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/27",
            "id": "subnet-0280153b78cd26887",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1A"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1A"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-080c2bd4fd168dec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.32/27",
            "id": "subnet-080c2bd4fd168dec6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2B"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2B"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2b-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0932bec6bf9cd4dc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.32/27",
            "id": "subnet-0932bec6bf9cd4dc8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1B"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1B"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-0bad15261e9e77ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.64/27",
            "id": "subnet-0bad15261e9e77ee0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2C"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2C"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2c-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0ed33de62fa095faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.64/27",
            "id": "subnet-0ed33de62fa095faf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1C"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1C"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-0280e242eafcf495d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.96/27",
            "id": "subnet-0280e242eafcf495d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2D"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "PUB SUBNET 2D"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2d-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0b5261b0f538570d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.96/27",
            "id": "subnet-0b5261b0f538570d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1D"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "PUB SUBNET 1D"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-1a-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-0651b2cb712f77151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/27",
            "id": "subnet-0651b2cb712f77151",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "RDS SUBNET 1A"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "RDS SUBNET 1A"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-1b-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-03a0d24f22c4eae64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.32/27",
            "id": "subnet-03a0d24f22c4eae64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "RDS SUBNET 1B"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "RDS SUBNET 1B"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-1c-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:subnet/subnet-00d9d0162967a7569",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.64/27",
            "id": "subnet-00d9d0162967a7569",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "RDS SUBNET 1C"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "RDS SUBNET 1C"
            },
            "vpc_id": "vpc-0948030cb1c2aff57"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-0c318786c6f97f6a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-0c318786c6f97f6a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "RDS SUBNET 2A"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "RDS SUBNET 2A"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-088558535557beedf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.32/27",
            "id": "subnet-088558535557beedf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "RDS SUBNET 2B"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "RDS SUBNET 2B"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:subnet/subnet-02c53059c15362dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.64/27",
            "id": "subnet-02c53059c15362dec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "RDS SUBNET 2C"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "RDS SUBNET 2C"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:938515849324:vpc/vpc-0a43e6dbaf842a8e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec2e0ed176a90091",
            "default_route_table_id": "rtb-00e33aaaaf87bd293",
            "default_security_group_id": "sg-029d4726d96fa59db",
            "dhcp_options_id": "dopt-deca86a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a43e6dbaf842a8e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e33aaaaf87bd293",
            "owner_id": "938515849324",
            "tags": {
              "Environment": "main-vpc",
              "Name": "multiregion-vpc"
            },
            "tags_all": {
              "Environment": "main-vpc",
              "Name": "multiregion-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938515849324:vpc/vpc-0948030cb1c2aff57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a5ffce3f28fdddc5",
            "default_route_table_id": "rtb-06c0420f70fa1eca3",
            "default_security_group_id": "sg-00ce0c2a9d7003fd7",
            "dhcp_options_id": "dopt-0f7d53426dd2df4dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0948030cb1c2aff57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06c0420f70fa1eca3",
            "owner_id": "938515849324",
            "tags": {
              "Environment": "peer-vpc",
              "Name": "multiregion-vpc-peer"
            },
            "tags_all": {
              "Environment": "peer-vpc",
              "Name": "multiregion-vpc-peer"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "main-2-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0e7c0110cf0cdf608",
            "peer_owner_id": "938515849324",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0948030cb1c2aff57",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "tags_all": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc.peer",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e7c0110cf0cdf608",
            "peer_owner_id": "938515849324",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0948030cb1c2aff57",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0a43e6dbaf842a8e1",
            "vpc_peering_connection_id": "pcx-0e7c0110cf0cdf608"
          },
          "dependencies": [
            "aws_vpc.peer",
            "aws_vpc_peering_connection.main-2-peer",
            "data.aws_caller_identity.current",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}